Rewrite methods and create new view processing for Janela